fix double scroll bar on dashboard sample

--- a/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/DefaultAppTemplate.css
+++ b/RS/Reporting/ReportManager/ReportManagerMVC/ReportManager/Forerunner/ReportViewer/css/DefaultAppTemplate.css
@@ -204,7 +204,7 @@ div.fr-layout-pagesection {
   display:block;
   width:auto;
   height:auto;
-  overflow:auto;
+  
 }
 
 div.fr-layout-pagesection-noscroll {
